added field_value resource: mvc; configured bootstrap to fix js/destroy fail

--- a/app/views/item_fields/edit.html.erb
+++ b/app/views/item_fields/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'item_fields/form', item_field: @item_field %>
 
-<%= link_to 'Show', @item_field %> |
-<%= link_to 'Back', item_field_path %>
+<%= link_to 'Show', category_item_field_path %> |
+<%= link_to 'Back', category_path %>
