--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -3,7 +3,7 @@
     <tr>
     <td><%= category.kind %></td>
     <td><%= link_to category.name, category_path(category) %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %> | <%= link_to 'Delete', category,  method: :delete, remote: true, data: {confirm: "Are you sure?"} %></td>
+    <td><%= link_to 'Edit!', edit_category_path(category) %> | <%= link_to 'Delete', category,  method: :delete, data: {confirm: "Are you sure?"} %></td>
     </tr>
  </div>
 </div>
