--- a/app/views/field_values/_form.html.erb
+++ b/app/views/field_values/_form.html.erb
@@ -1,10 +1,4 @@
-<%= form_for @category do |f| %>
-
-  <div class="field">
-    <%= f.label :kind %><br>
-    <%= f.text_field :kind %>
-  </div>
-
+<%= form_for [item_field, field_value] do |f| %>
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
