--- a/app/views/item_fields/show.html.erb
+++ b/app/views/item_fields/show.html.erb
@@ -1,9 +1,22 @@
-<p id="notice"><%= notice %></p>
+<h1>Field: <%= @item_field.field_name %></h1>
 
-<p>
-  <strong>Field Names:</strong>
-  <%= @item_field.field_name %>
-</p>
+<%= link_to 'Edit field name', edit_category_item_field_path(@item_field) %> |
+<%= link_to 'Return to field list', categories_path %>
 
-<%= link_to 'Edit', edit_category_item_field_path(@item_field) %> |
-<%= link_to 'Back', categories_path %>
+<h4>New Field Value!</h4>
+<p><%= link_to "New Value", new_item_field_field_value_path(@item_field) %></p>
+<table class="table table-striped table-hover">
+  <thead>
+    <th>ID</th>
+    <th>Item field value</th>
+  </thead>
+  <tbody>
+    <% @item_field.field_values.each do |field_value| %>
+      <tr>
+        <td><%= field_value.id %></td>
+        <td><%= link_to field_value.name, item_field_field_value_path(@item_field, field_value) %></td>
+        <td><%= link_to 'edit', edit_item_field_field_value_path(@item_field, field_value) %> | <%= link_to 'Delete', [@item_field, field_value], method: :delete %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
