--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td><%= link_to item_field.field_name, category_item_field_path(@category, item_field) %></td>
         <td><%= item_field.field_type %></td>
-        <td><%= link_to 'edit', edit_category_item_field_path([@category, item_field]) %> | <%= link_to 'Delete', [@category, item_field], method: :delete %></td>
+        <td><%#= link_to 'edit', edit_category_item_field_path([@category, item_field]) %> | <%#= link_to 'Delete', [@category, item_field], method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
