--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,13 +1,22 @@
 <%= form_for @category do |f| %>
-
-  <div class="field">
-    <%= f.label :kind %><br>
-    <%= f.text_field :kind %>
-  </div>
-
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+    <%#= f.select :name, options_for_select(Category.category_dropdown) %>
+    <%#= f.select :name, options_for_select(Category.category_dropdown), {:id => "category_name", :include_blank => true} %>
+  </div>
+
+  <h4>Associated Fields:</h4>
+  <div class="form-check">
+    <% if @category.name %>
+      <%= hidden_field_tag "category[item_field_ids][]", nil %>
+      <% ItemField.category_fields(@category.name).each do |item_field| %>
+        <div class="custom-control custom-checkbox custom-control-inline">
+          <%= check_box_tag "category[item_field_ids][]", item_field.id, @category.item_field_ids.include?(item_field.id), id: dom_id(item_field), class: "custom-control-input" %>
+          <%= label_tag dom_id(item_field), item_field.field_name, class: "custom-control-label" %>
+        </div>
+      <% end %>
+    <% end %>
   </div>
   <%= f.submit "Save" %>
 <% end %>
