--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit Category</h1>
+<h1>Edit: <%= @category.name %></h1>
 <p><%= link_to "category list", categories_path %></p>
 <%= render 'categories/form' %>
