--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,9 +6,9 @@
 
 <%= link_to "New Category", new_category_path %>
 
-<table class="table">
+<table class="table table-striped table-hover">
   <thead>
-    <th>Kind</th>
+    <th>ID</th>
     <th>Name</th>
   </thead>
   <tbody>
