--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Category: <%= @category.name %></h1>
 
-<p><%= link_to "Edit category", edit_category_path(@category) %> | <%= link_to "Return to Category List", categories_path %></p><br>
+<p><%= link_to "Edit: #{@category.name}", edit_category_path(@category) %> | <%= link_to "Return to Category List", categories_path %></p><br>
 
 <p><% @category.item_fields %></p>
 <table class="table table-striped table-hover">
@@ -16,7 +16,6 @@
       <tr>
         <td><%= link_to item_field.field_name, category_item_field_path(@category, item_field) %></td>
         <td><%= item_field.field_type %></td>
-        <td><%#= link_to 'edit', edit_category_item_field_path([@category, item_field]) %> | <%#= link_to 'Delete', [@category, item_field], method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
