--- a/app/views/item_fields/index.html.erb
+++ b/app/views/item_fields/index.html.erb
@@ -3,7 +3,7 @@
 <h4>Export Fields</h4>
 <p>
   Download:
-  <%#= link_to "CSV", item_fields_path(format: "csv") %> |
+  <%= link_to "CSV", item_fields_path(format: "csv") %>
   <%#= link_to "Excel", item_fields_path(format: "xls") %>
 </p>
 
