--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @item, :html => { :class => 'form', :id => 'item_form'} do |f| %>
   <%#= render "items/hidden", f: f %>
+  <%= f.hidden_field :field_value_ids %>
   <!-- <script type="text/javascript">
     function submitform(){
       $('#redirect_location').val(':edit');
@@ -20,9 +21,26 @@
     </div>
   </div>
 
-  <%# type_list.each do |type| %>
-    <%#= render "items/type", type: type, f: f %>
-  <%# end %>
+  <div class="form-row">
+    <div class="col-1">
+      <%= f.label :category %>
+      <%= f.collection_select :category_id, Category.all, :id, :name, { class: 'form-control', :include_blank => true } %>
+    </div>
+  </div>
+
+  <% if @item.category_id %>
+    <% @item.category.item_fields.each do |item_field| %>
+      <div class="form-row">
+        <div class="col">
+          <%# item_field.field_values.each do |field_value| %>
+            <%#= field_value.name %>
+          <%# end %>
+          <%= f.label item_field.field_name %>
+          <%= f.collection_select :field_value_ids, item_field.field_values, :id, :name, { class: 'form-control', :include_blank => true } %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 
   <%#= render "items/properties", parent: @item, f: f %>
   <%= f.submit "Save" %>
