refactored item#form to so field_value dropdowns have ability to assign default field_values via field_value scope

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,4 @@
 <h1>Edit: <%= @category.name %></h1>
 <p><%= link_to "category list", categories_path %></p>
+<p>Edit: <%#= ItemField.category_name(@category.name) %></p>
 <%= render 'categories/form' %>
