--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @item, :html => { :class => 'form', :id => 'item_form'} do |f| %>
   <%#= render "items/hidden", f: f %>
-  <%= @item.field_values.pluck(:name) %>
+  <div>
+    <%= @item.field_values.pluck(:name) %>
+  </div>
   <%#= f.hidden_field :field_value_ids %>
   <!-- <script type="text/javascript">
     function submitform(){
@@ -25,7 +27,7 @@
   <div class="form-row">
     <div class="col-1">
       <%= f.label :category %>
-      <%= f.collection_select :category_id, Category.all, :id, :name, { class: 'form-control', :include_blank => true } %>
+      <%= f.collection_select :category_id, Category.all, :id, :name, { class: 'form-control', :include_blank => true }, onchange: "this.form.submit();" %>
     </div>
   </div>
 
@@ -36,7 +38,7 @@
           <div class="col">
             <%= label_tag item_field.field_name %><br>
             <%= select_tag "item[field_value_ids][]", options_from_collection_for_select(item_field.field_values, :id, :name, selected: @item.field_value_ids[i]), { :include_blank => true } %>
-            <%#= select_tag "item[field_value_ids][]", options_from_collection_for_select(item_field.field_values, :id, :name, selected: 29) %>
+            <%#= select_tag "item[field_value_ids][]", options_from_collection_for_select(item_field.field_values, :id, :name, selected: 29)  %>
         </div>
       </div>
       <%# end %>
