last push before refactor of category_name and conditional field_value partial on items form

--- a/app/views/field_values/edit.html.erb
+++ b/app/views/field_values/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'field_values/form', item_field: @field_value.item_field, field_value: @field_value %>
 
 <%= link_to 'Show', item_field_field_value_path(@field_value.item_field, @field_value) %> |
-<%= link_to 'Back!', category_item_field_path(@field_value.item_field.category, @field_value.item_field) %>
+<%#= link_to 'Back!', category_item_field_path(@field_value.item_field.category, @field_value.item_field) %>
