--- a/app/views/items/_field_value.html.erb
+++ b/app/views/items/_field_value.html.erb
@@ -1,5 +1,7 @@
 <%= hidden_field_tag "item[field_value_ids][]", nil %>
+<%= item.category.item_fields.map {|item_field| "#{item_field.field_name}" } %>
 <% item.category.item_fields.each_with_index do |item_field, i| %>
+  <%# next if ["canvas_kind", "paper_kind", "board_kind"].include?(item_field.field_name) && (item.substrate_type.empty? || item.substrate_type[0] != item_field.field_name.gsub("_kind", "")) %>
   <% if ["original_kind", "handmade_medium", "handblown_medium"].include?(item_field.field_name) %>
     <div class="hidden">
       <%= select_tag "item[field_value_ids][]", options_from_collection_for_select(item_field.field_values, :id, :name, selected: FieldValue.default_id(item.category.name)) %>
