--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 
   <body>
     <div class="container">
+      <ul class="nav">
+        <li class="nav-link"><%= link_to "Categories", categories_path %></li>
+        <li class="nav-link"><%= link_to "Items", items_path %></li>
+        <li class="nav-link"><%= link_to "Fields", item_fields_path %></li>
+        <li class="nav-link"><%= link_to "Values", field_values_path %></li>
+      </ul>
       <div class="flash">
         <% if flash[:notice] %>
            <div class="alert alert-success">
