--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @item, :html => {:class => 'form', :id => 'item_form'} do |f| %>
   <div>
-    <p><%= @item.category_fields.pluck(:field_name) %></p>
+    <p><%#= @item.category_fields.pluck(:field_name) %></p>
     <p><%#= Item.type_values("mounting_type") %></p>
   </div>
 
