--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,1 +1,3 @@
 <h1><%= @item.sku %></h1>
+<p><%= @item.category_fields %></p>
+<p><%#= ItemField.where(field_name: "edition_number").inspect %></p>
