--- a/app/views/items/item_fields/_number_field.html.erb
+++ b/app/views/items/item_fields/_number_field.html.erb
@@ -1,4 +1,4 @@
-<div class="col-auto">
+<div class="col">
   <%= f.label item_field.field_name %><br/>
   <%= f.number_field item_field.field_name, :step => 0.5 %>
 </div>
