--- a/app/views/item_fields/show.html.erb
+++ b/app/views/item_fields/show.html.erb
@@ -3,7 +3,12 @@
 <%= link_to 'Edit field name', edit_category_item_field_path(@item_field) %> |
 <%= link_to 'Return to field list', categories_path %>
 
-<h4>New Field Value!</h4>
+<h4>Add Subfield</h4>
+<div>
+  <%= render 'item_fields/field_chain_form', item_field: @item_field %>
+</div>
+
+<h4>New Field Value</h4>
 <p><%= link_to "New Value", new_item_field_field_value_path(@item_field) %></p>
 <table class="table table-striped table-hover">
   <thead>
