--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,11 +10,15 @@
   </thead>
 
   <h4>Build New Item Field</h4>
-  <p><%= link_to "New Field", new_category_item_field_path(@category) %></p>
+  <!-- <p><%#= link_to "New Field", new_category_item_field_path(@category) %></p> -->
+  <div>
+    <%= render 'categories/category_fields_form' %>
+  </div>
   <tbody>
     <% @category.item_fields.each do |item_field| %>
       <tr>
-        <td><%= link_to item_field.field_name, category_item_field_path(@category, item_field) %></td>
+        <!-- <td><%#= link_to item_field.field_name, category_item_field_path(@category, item_field) %></td> -->
+        <td><%= link_to item_field.field_name, item_field_path(item_field) %></td>
         <td><%= item_field.field_type %></td>
       </tr>
     <% end %>
