--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -12,7 +12,7 @@
   <h4>Build New Item Field</h4>
   <!-- <p><%#= link_to "New Field", new_category_item_field_path(@category) %></p> -->
   <div>
-    <%= render 'categories/category_fields_form' %>
+    <%#= render 'categories/category_fields_form' %>
   </div>
   <tbody>
     <% @category.item_fields.each do |item_field| %>
