--- a/app/views/categories/_category_fields_form.html.erb
+++ b/app/views/categories/_category_fields_form.html.erb
@@ -1,5 +1,4 @@
-<%#= form_for [@category, ItemField.new], url: {controller: "category_fields"} do |f| %>
-<%= form_tag [@category, ItemField.new], url: {controller: "category_fields"} do |f| %>
+<%= form_for [@category, ItemField.new] do |f| %>
 
   <div class="form-row">
     <div class="field">
