--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Category#Show: <%= @category.name %></h1>
-
+<p>params:<%= params %></p>
 <p><%= link_to "Edit: #{@category.name}", edit_category_path(@category) %> | <%= link_to "Return to Category List", categories_path %></p><br>
 
 <p><% @category.item_fields %></p>
@@ -12,7 +12,7 @@
   <h4>Build New Item Field</h4>
   <!-- <p><%#= link_to "New Field", new_category_item_field_path(@category) %></p> -->
   <div>
-    <%#= render 'categories/category_fields_form' %>
+    <%= render 'categories/category_fields_form' %>
   </div>
   <tbody>
     <% @category.item_fields.each do |item_field| %>
@@ -20,6 +20,8 @@
         <!-- <td><%#= link_to item_field.field_name, category_item_field_path(@category, item_field) %></td> -->
         <td><%= link_to item_field.field_name, item_field_path(item_field) %></td>
         <td><%= item_field.field_type %></td>
+        <td><%= link_to 'Remove', [@category, item_field], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
       </tr>
     <% end %>
   </tbody>
